Attempt to prevent access to specific fields of the manas security manager.
Signed-off-by: David Black <dblack@atlassian.com>