@@ -42,6 +42,7 @@
                         <version>3.0.1</version>
                         <configuration>
                             <additionalJOptions>
+                                <additionalJOption>--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.security.util=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.net=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
